Add UI/UX Pro Max

--- a/about.html
+++ b/about.html
@@ -79,6 +79,12 @@
                             <div class="skill-progress" data-progress="75"></div>
                         </div>
                     </div>
+                    <div class="skill-item">
+                        <div class="skill-name">UI/UX Pro Max</div>
+                        <div class="skill-bar">
+                            <div class="skill-progress" data-progress="95"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
