--- a/portfolio.html
+++ b/portfolio.html
@@ -34,6 +34,7 @@
                 <button class="filter-btn" data-filter="web">Web</button>
                 <button class="filter-btn" data-filter="app">App</button>
                 <button class="filter-btn" data-filter="design">设计</button>
+                <button class="filter-btn" data-filter="uipro">UI/UX Pro Max</button>
             </div>
             
             <div class="portfolio-grid">
@@ -95,6 +96,16 @@
                         <h3>UI/UX 设计</h3>
                         <p>用户体验设计项目</p>
                         <button class="btn-view" onclick="openModal(6)">查看详情</button>
+                    </div>
+                </div>
+                <div class="portfolio-item" data-category="uipro">
+                    <div class="portfolio-image">
+                        <div class="placeholder-img">💎</div>
+                    </div>
+                    <div class="portfolio-info">
+                        <h3>UI/UX Pro Max</h3>
+                        <p>顶级用户体验设计与实现</p>
+                        <button class="btn-view" onclick="openModal(7)">查看详情</button>
                     </div>
                 </div>
             </div>
